--- a/docs/styles.css
+++ b/docs/styles.css
@@ -2,6 +2,17 @@
     font-size: 1.875rem;
     font-weight: 700;
     color: #333;
+    margin-bottom: 1rem;
+}
+
+.md-typeset h2 {
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 0;
+}
+
+.md-typeset p {
+    margin-top: 0;
 }
 
 .md-header__title {
