Docs - Added Class Names to the Wiki

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -131,3 +131,13 @@ div.function.notes .md-button {
     min-width: 800px;
     width:fit-content;
 }
+
+kbd {
+    display: inline-block;
+    color: #555;
+    background-color: #fcfcfc;
+    border: solid 1px #ccc;
+    border-bottom-color: #bbb;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #bbb;
+}
